question-image template fixes - maximize the size of image and PDF block to fit the available screen space; fix PDF loading by using native browser embed functionality (works well on Chrome); make the layout responsive - on smaller screens there will be a min-height on the image to make sure it's not too small to be readable

--- a/src/app/module-viewer/main/main.component.sass
+++ b/src/app/module-viewer/main/main.component.sass
@@ -1,6 +1,8 @@
 @import "src/app/common/sass/variables.sass";
 \:host
   display: flex
+  flex: 1
+
   // background: #f3f3f3
 
 .expand-wrapper
