--- a/src/app/module-viewer/module-viewer-root.component.sass
+++ b/src/app/module-viewer/module-viewer-root.component.sass
@@ -1,5 +1,9 @@
 \:host
-  display: block
+  display: flex
+
+  \::ng-deep
+    .content-wrapper
+      flex: 1
 
   \::ng-deep h1
       text-transform: uppercase
