--- a/src/app/module-viewer/riverside-step-template/templates/question-image/question-image.component.sass
+++ b/src/app/module-viewer/riverside-step-template/templates/question-image/question-image.component.sass
@@ -1,14 +1,28 @@
+\:host
+    display: flex
+    width: 100%
+    text-align: center
+    flex-direction: column
+
+    .content-wrapper
+        flex: 1
+
 .instructions
     p
         font-size: 2em
 
     text-align: center
-    margin-bottom: 2em
+    flex: 0
+    margin-bottom: 0
 
 .questions
     font-size: 20px
     padding-top: 1em
     padding-right: 1em
+    margin: 0
+    margin-bottom: 2em
+    text-align: left
+    flex: 0
 
     li
         margin-bottom: 7px
@@ -20,18 +34,25 @@
         cursor: pointer
 
 .image
-    margin-top: 2em
-    img
-        border: 1px solid #aaa
+    border: 1px solid #aaa
+    flex: 1
+    display: flex
+
+    .image-container
+        flex: 1
+        background-position: center
+        background-repeat: no-repeat
+        background-size: contain
+        border: 2em solid white
+        min-height: 40vw
 
 .pdf
-    width: 100%
-    height: 700px
+    flex: 1
     position: relative
 
     iframe
         width: 100%
-        height: 700px
+        height: 100%
 
     &.pdf-loading
         font-size: 4vw
@@ -43,3 +64,7 @@
             text-align: center
             position: absolute
             display: block !important
+
+@media (max-width: 1440px)
+    .questions
+        font-size: 1.2vw
